--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1658,4 +1658,13 @@ opacity: 0.2;
 color: white;
 background-color: white;
 }
+hr{
+    height: 1px;
+    background-color: inherit;
+    opacity: 0.8;
+    background: black;
+}
+.opacity-50{
+    opacity: 50% !important;
+}
 
