--- a/src/assets/css/bootstrap.colors.emphasis.css
+++ b/src/assets/css/bootstrap.colors.emphasis.css
@@ -4,7 +4,7 @@
 :root {
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
-  --bs-success: #198754;
+  --bs-success: #2164f3;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
