--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1714,4 +1714,15 @@ hr{
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
 }
+.offcanvas.offcanvas-end{
+    border: 0px;
+}
+.list-group-item:first-child {
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+.border-dashed {
+    border-style: dashed !important;
+    border: 1px solid;
+}
         
