--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1728,4 +1728,13 @@ hr{
 .header-action-btn .btn{
     border-left: 1px solid #e8e8e8  ;
 }
+.fs-12{
+    font-size: 12px !important;
+}
+.custom-file, .custom-select, .form-control, .form-select, input {
+    color: #283c50;
+    padding: 12px 15px;
+    border-color: #e5e7eb;
+    border-radius: 5px;
+}
         
